<resources>
    <string name="app_name">I Can Buy</string>
<<<<<<< HEAD
    <string name="facebook_app_id">3785758321483845</string>
    <string name="fb_login_protocol_scheme">fb3785758321483845</string>


=======
>>>>>>> 3db4cc3027fc86728daeaea22102e24630b4fa1a
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Dénilson Fallas Robles</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_cupones">Mis cupones</string>
    <string name="menu_pago">Métodos de pago</string>
    <string name="menu_perfil">Perfil</string>
<<<<<<< HEAD
    <string name="menu_sesion">Cerrar sesión</string>
=======
    <string name="menu_sesion">Cerrar sesión Dénilson Fallas</string>
>>>>>>> 3db4cc3027fc86728daeaea22102e24630b4fa1a

    <string name="label_agregar">Agregar</string>
    <string name="lbl_actualizar">Actualizar</string>
    <string name="lbl_Agregar">Agregar</string>
    <string name="bt_form_hint_card_number">Número de tarjeta</string>
    <string name="bt_form_hint_expiration">Fecha de vencimiento</string>
    <string name="bt_form_hint_cvv">@string/bt_cvv</string>
    <string name="bt_form_hint_cardholder_name">Nombre del titular de la tarjeta</string>
    <string name="bt_form_hint_postal_code">Código postal</string>
    <string name="bt_form_hint_country_code">Código de país</string>
    <string name="bt_form_hint_mobile_number">N.º de móvil</string>

    <string name="bt_cvv">CVV</string>
    <string name="bt_cvc">CVC</string>
    <string name="bt_cid">CID</string>
    <string name="bt_cvn">CVN</string>

    <string name="bt_month">Mes</string>
    <string name="bt_year">Año</string>

    <string name="bt_card_number_required">El número de tarjeta es obligatorio</string>
    <string name="bt_card_number_invalid">Número de tarjeta no válido</string>
    <string name="bt_cvv_required">El valor %s es obligatorio</string>
    <string name="bt_cvv_invalid">El valor %s no es válido</string>
    <string name="bt_expiration_required">La fecha de vencimiento es obligatoria</string>
    <string name="bt_expiration_invalid">Fecha de vencimiento no válida</string>
    <string name="bt_cardholder_name_required">El nombre del titular de la tarjeta es obligatorio</string>
    <string name="bt_postal_code_required">El código postal es obligatorio.</string>
    <string name="bt_country_code_required">El código de país es obligatorio.</string>
    <string name="bt_mobile_number_required">El número de móvil es obligatorio.</string>

    <string name="bt_save_card_checkbox_name">Guardar tarjeta</string>
<<<<<<< HEAD
    <string name="terminos">Al acceder y utilizar este servicio, usted acepta y accede a estar
        obligado por los términos y disposiciones de este acuerdo. Asimismo, al utilizar
        estos servicios particulares, usted estará sujeto a toda regla o guía de uso
        correspondiente que se haya publicado para dichos servicios. Toda participación en
        este servicio constituirá la aceptación de este acuerdo. Si no acepta cumplir con lo
        anterior, por favor, no lo utilice
        La información brindada por los usuarios no se compartirá a
        terceros.
    "I Can Buy" es una marca registrada, y su logo es propiedad intelectual.
       <b>Legislación y jurisdicción aplicable.</b>
    Cualquier intento de robo o estafa podrá causar la eliminación de su cuenta.
    Revise que todos sus datos sean correctos.
    Esta app utiliza cookies.
    Para métodos de pago, se le solicitará una cuenta de PayPal.
        Toda actividad debe ser lícita.
        Política de privacidad y protección de datos.
        Se protegerá su privacidad.

    </string>

    <string name="tv_Salir">Cerrar sesión Google</string>
    <string name="tv_cerrar">Salir de la aplicación</string>
    <string name="bt_exit">Cerrar Sesión</string>
=======

    <string name="tv_exit">Al presionar el botón de abajo se saldrá de la aplicación</string>
    <string name="bt_exit">Salir de la aplicacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> 3db4cc3027fc86728daeaea22102e24630b4fa1a
    <string name="invalid_name">Campo obligatorio</string>
    <string name="invalid_email">Ingrese un correo válido</string>
    <string name="invalid_password">Contraseña demasiado débil</string>
    <string name="invalid_password1">Digite al menos 6 caracteres, 1 minúscula, 1 mayúscula, 1 carácter especial</string>
    <string name="invalid_confirm_password">Las contraseñas no coinciden</string>

<<<<<<< HEAD
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_terminos">Leanback Title</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="registration_success">Registro exitoso</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="title_activity_term">TermActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
=======

>>>>>>> 3db4cc3027fc86728daeaea22102e24630b4fa1a
</resources>