<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
<<<<<<< HEAD
            android:icon="@drawable/home1"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/favoritos1"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_cupones"
            android:icon="@drawable/cupones1"
=======
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/favoritos"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_cupones"
            android:icon="@drawable/cupones"
>>>>>>> 3db4cc3027fc86728daeaea22102e24630b4fa1a
            android:title="@string/menu_cupones" />
        <item
            android:id="@+id/nav_pago"
            android:icon="@drawable/pago"
            android:title="@string/menu_pago" />
        <item
            android:id="@+id/nav_perfil"
<<<<<<< HEAD
            android:icon="@drawable/perfil1"
=======
            android:icon="@drawable/perfil"
>>>>>>> 3db4cc3027fc86728daeaea22102e24630b4fa1a
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_sesion"
            android:title="@string/menu_sesion" />
    </group>
</menu>