<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.icb.icanbuy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="com.icb.icanbuy.ui.favoritos.FavoritosFragment"
        android:label="@string/menu_favoritos"
        tools:layout="@layout/fragment_favoritos" />
<!--
    <fragment
        android:id="@+id/nav_cupones"
        android:name="com.icb.icanbuy.ui.cupones.CuponesFragment"
        android:label="@string/menu_cupones"
        tools:layout="@layout/fragment_cupones" />
-->
    <fragment
        android:id="@+id/nav_pago"
        android:name="com.icb.icanbuy.ui.pago.PagoFragment"
        android:label="@string/menu_pago"
        tools:layout="@layout/fragment_pago" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.icb.icanbuy.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_sesion"
        android:name="com.icb.icanbuy.ui.sesion.SesionFragment"
        android:label="@string/menu_sesion"
        tools:layout="@layout/fragment_sesion" />
</navigation>